# cmake-templates

./: .clang-format  .gitignore  CMakeLists.txt  README.md  do_cmake
src/app1/: CMakeLists.txt  main.cpp
src/app2/: CMakeLists.txt  main.cpp
src/examplelib/: CMakeLists.txt  examplelib.cpp
